--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .pnp.js
 .yarn/install-state.gz
 
+
 # testing
 /coverage
 
@@ -37,3 +38,7 @@ next-env.d.ts
 
 #env
 .env
+
+*package-lock.json
+*package.json
+*.eslintrc.json
